--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
   <div class="superinfo-bg">
     <div class="superinfo">
-      <p>Seg/Sex</p>
-      <p><a href="tel:+55159999-9999">+55 9999-9999</a></p>
+      <p>Seg / Sex - 08:00 às 18:00</p>
+      <p><a href="tel:+55159999-9999">+55 15 9999-9999</a></p>
       <p>Av. Ali Perto, 330, São Luis - MA</p>
     </div>
   </div>
