CSS no menu - .menu

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       </div>
       <nav>
         <ul>
-          <li><a href="#"></a>Sobre</li>
-          <li><a href="#"></a>Produtos</li>
-          <li><a href="#"></a>Preço</li>
-          <li><a href="#"></a>Qualidade</li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#produtos">Produtos</a></li>
+          <li><a href="#preco">Preço</a></li>
+          <li><a href="#qualidade">Qualidade</a></li>
         </ul>
       </nav>
     </div>
