CSS em preço .preco

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <a href="#">Comprar</a>
     </div>
     <div class="preco-item">
-      <h2>Cobre</h2>
+      <h2>Prata</h2>
       <span><sup>R$</sup>39</span>
       <ul>
         <li>Planos Ilimitados</li>
@@ -100,13 +100,12 @@
       <a href="#">Comprar</a>
     </div>
     <div class="preco-item">
-      <h2>Cobre</h2>
+      <h2>Ouro</h2>
       <span><sup>R$</sup>79</span>
       <ul>
         <li>Planos Ilimitados</li>
         <li>Acesso Restrito</li>
         <li>Conteúdo Secreto</li>
-        <li>Download dos Itens</li>
         <li>Suporte 24h</li>
         <li>Compra Exclusiva</li>
         <li>Download dos Itens</li>
@@ -133,7 +132,7 @@
       </p>
     </div>
     <div class="qualidade-item">
-      <h2>Econômicp</h2>
+      <h2>Econômico</h2>
       <p>
         There are many variations of passages of Lorem Ipsum available,
          but the majority have suffered alteration in some form,
